# xclients

./: .gitmodules  README.md  pyproject.toml
core/: pyproject.toml
core/cli/: common.py  da3.py
plugins/: WilorServer.py
plugins/server_camera/: pyproject.toml
plugins/server_da3/: pyproject.toml
plugins/server_hamer/: pyproject.toml
plugins/server_sam3do/: pyproject.toml
plugins/server_wilor/: main.py  pyproject.toml
plugins/server_wilor/src/server_wilor/: dummy.py  server.py
src/xclients/server/: da3.py
